# llm-plays

./: .gitignore  BENCHMARKS.md  INSTALL.md  LEARNINGS.md  PLAN.md  PRESENTATION.md  README.md  goals.md  memory.md  pyproject.toml
data/pokemon_red/: items.yaml  maps.yaml  marts.yaml  moves.yaml  species.yaml  tiles.yaml  types.yaml
emulator/: launch_mgba.ps1  mgba_bridge.lua
harness/: behaviors.py  briefing.py  cli.py  executor.py  interfaces.py  items.py  loop.py  navigate.py  profile.py  prompts.py  publish.py  quests.py  route.py  runlog.py  stream.py  stuckness.py  sync.py  tilemap.py  types.py  watchdog.py
harness/drivers/: __init__.py  mgba.py
harness/policy/: __init__.py  fish.py  llm.py
plans/pokemon_red/: act0-goals.md  master-plan.md  quest-tree.md
profiles/: pokemon_red.yaml
prompts/: claude_checkpoint.md
prompts/pokemon_red/: goals.md  prompt.md  quests.yaml  verify.md
runs/pokemon_red/limits-4/: goals.md  learnings.md  memory.md  waypoints.yaml
server/: serve_gemma.sh  setup_llm_server.sh  wait_ready.sh
skills/common/: boot_mash.yaml  mash_through_dialogue.yaml
skills/pokemon_red/: attack_1.yaml  attack_2.yaml  attack_3.yaml  attack_4.yaml  buy_3_antidotes.yaml  buy_3_pokeballs.yaml  buy_5_potions.yaml  buy_potion_x5.yaml  enter_door_above.yaml  flee_battle.yaml  heal_at_center.yaml  use_antidote.yaml  use_potion_battle.yaml
tools/: diagnose.py  escalation_alert.ps1  goals_server.py  validate_server.py
